# Toxicity-from-2D-Structure

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ci.yml  condaenv.gx8d2acj.requirements.txt  env.yaml  pyproject.toml  requirements-dev.in  requirements.in  tox21_data.csv  toxicity_from_2d_structure.ipynb
.github/workflows/: ci.yml  ci_docker.yml  ci_no_docker.yml
data/: tox21_raw.csv
my_pytorch/: everything_so_far.ipynb
my_pytorch/constants/: __init__.py
my_pytorch/datasets/: _csv_dataset.py
my_pytorch/target_transforms/: __init__.py  _binary_toxicity.py
my_pytorch/transforms/: _mol_to_greyscale.py  _mol_to_rdkit_descriptors.py  _smiles_to_mol.py
my_pytorch/utils/: __init__.py  _plot_greyscale.py
notebooks/: everything_so_far.ipynb  neural_net.ipynb
src/: README.md  everything_so_far.ipynb  neural_net.ipynb
src/constants/: __init__.py  toxicities.py
src/datasets/: __init__.py  _csv_dataset.py  _tox21base.py  _tox21images.py  _tox21tabular.py
src/models/: __init__.py
src/target_transforms/: __init__.py  _binary_toxicity.py
src/toxic2d/: __init__.py
src/toxic2d/constants/: __init__.py  toxicities.py
src/toxic2d/datasets/: __init__.py  _tox21base.py  _tox21images.py  _tox21tabular.py
src/toxic2d/metrics/: __init__.py  _precision.py  _recall.py
src/toxic2d/models/: __init__.py  (+3 more)
src/transforms/: __init__.py  _mol_to_greyscale.py  _mol_to_rdkit_descriptors.py  _smiles_to_mol.py
src/utils/: __init__.py  _plot_greyscale.py
tensorflow/: toxicity_from_2d_structure.ipynb
tests/: conftest.py
tests/unit/: test_init.py
(+24 files in other folders)
